--- a/collector/src/main/resources/application.conf
+++ b/collector/src/main/resources/application.conf
@@ -1,3 +1,19 @@
+akka {
+  log-config-on-start = off
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "INFO"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  actor {
+    debug {
+      autoreceive = on
+      lifecycle = on
+      unhandled = on
+      fsm = on
+      event-stream = on
+    }
+  }
+  http.server.parsing.illegal-header-warnings = on
+}
 
 http {
   host = "127.0.0.1"
