docker. jenkins ci integration.

--- a/collector/src/main/resources/remote/application.conf
+++ b/collector/src/main/resources/remote/application.conf
@@ -1,9 +1,11 @@
-include "local.conf"
+    ###################################
+    #### TEST SERVER CONFIGURATION ####
+    ###################################
 
 akka {
-  log-config-on-start = off
+  log-config-on-start = on
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "INFO"
+  loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   actor {
     debug {
@@ -18,10 +20,10 @@ akka {
 }
 
 http {
-  host = ${http.host}
-  port = ${http.port}
+  host = "0.0.0.0"
+  port = 8080
 }
 ws {
-  host = ${ws.host}
-  port = ${ws.port}
+  host = "0.0.0.0"
+  port = 8081
 }
