--- a/collector/src/test/resources/application.conf
+++ b/collector/src/test/resources/application.conf
@@ -1,8 +1,4 @@
-    ###################################
-    #### TEST SERVER CONFIGURATION ####
-    ###################################
-
-http {
-  interface = "0.0.0.0"
-  port = 8080
+ws {
+  host = "127.0.0.1"
+  port = 8081
 }
